kubernetes/apps/pairdrop/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pairdrop
  labels:
    app.kubernetes.io/name: pairdrop
    app.kubernetes.io/part-of: azalea-homelab
