kubernetes/apps/pairdrop/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pairdrop
  namespace: pairdrop
  labels:
    app.kubernetes.io/name: pairdrop
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: pairdrop
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pairdrop
    spec:
      containers:
        - name: pairdrop
          image: lscr.io/linuxserver/pairdrop:latest
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 512Mi
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 20
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
