kubernetes/apps/pairdrop/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pairdrop
  namespace: pairdrop
  labels:
    app.kubernetes.io/name: pairdrop
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: pairdrop
