kubernetes/apps/pairdrop/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pairdrop
  namespace: pairdrop
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: pairdrop.pirackr.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pairdrop
                port:
                  number: 80
